@@ -237,10 +237,10 @@ drivers are required to use these devices. These drivers are often finicky and
 incompatible with some sound cards. PlayStation-&gt;Parallel adaptors can be 
 purchased from the StepMania web site or any importer.<br>
 <br>
-For Windows 98 and Windows Me users, the recommended driver is &quot;<a href="http://www.aldostools.com/dpad.html">DirectPad 
-Pro 5.0 for Win9x</a>&quot;. For Windows 2000 and Windows XP, the recommended drivers 
-is NTPad XP 1.x or
-<a href="http://www.psxpad.com/download/downcnt.php?name=psxp_a020606b">PSXPAD</a>.<br>
+For Windows 98 and Windows Me users, the recommended driver is DirectPad 
+Pro 5.0 for Win9x. For Windows 2000 and Windows XP, the recommended drivers 
+is NTPad XP 1.x or PSXPAD.&nbsp; For the latest versions of these drivers, visit
+<a href="http://www.aldostools.com/dpad.html">Aldo's Tools</a>.<br>
 <br>
 StepMania now natively supports USB Pump It Up pads.<br>
 <br>
