@@ -18,7 +18,8 @@ NEW FEATURE: Option for user-selectable extra stage 1
 CHANGE:  Documentation now in HTML format.
 CHANGE:  Overhauled NoteSkin format.  See README-FIRST.htm for details.
 BUG FIX:  Super-shuffle fixed (now doesn't add extra notes)
-NEW FEATURE: Added BIG transform (changes notes on beats to jumps)
+NEW FEATURE: Added WIDE transform (changes notes on beats to jumps)
+NEW FEATURE: Added TALL transform (adds 16th notes between 8ths)
 
 ----------------------- Version 3.01 ---------------------------
 CHANGE:  Simplified NoteSkin tap graphic format.  Old NoteSkins will need to 
